// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Snapshots renders a Radio with a label and description correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-19j50o1-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
    htmlFor="Radio"
  >
    <div
      className="css-1fivrci-WrapperRadio exxsmtx3"
    >
      <input
        checked={false}
        className="css-tt5avj-RadioInput exxsmtx0"
        id="Radio"
        onChange={[MockFunction]}
        type="radio"
        value="value"
      />
      <div
        className="css-1p9owhe-Checkmark exxsmtx2"
      >
        <div
          className="css-4mstmd-Centermark exxsmtx1"
          data-testid="radio-centermark"
        />
      </div>
    </div>
    Label
  </label>
  <div
    className="fl-text css-p91gac-Text-setSizeFonts-setSizeLineHeight e4p1v736"
    size="small"
  >
    Description
  </div>
</div>
`;

exports[`<Radio /> Snapshots renders a checked Radio correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-19j50o1-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
    htmlFor="Radio"
  >
    <div
      className="css-1fivrci-WrapperRadio exxsmtx3"
    >
      <input
        checked={true}
        className="css-tt5avj-RadioInput exxsmtx0"
        id="Radio"
        onChange={[MockFunction]}
        type="radio"
        value="value"
      />
      <div
        className="css-1p9owhe-Checkmark exxsmtx2"
      >
        <div
          className="css-4mstmd-Centermark exxsmtx1"
          data-testid="radio-centermark"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`<Radio /> Snapshots renders a disabled Radio correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-10l10vp-BaseLabel-Text-BaseLabel ev4kwu51"
    color="disabled"
    fontSize="text-s"
    fontWeight="bold"
    htmlFor="Radio"
  >
    <div
      className="css-1fivrci-WrapperRadio exxsmtx3"
    >
      <input
        checked={false}
        className="css-tt5avj-RadioInput exxsmtx0"
        disabled={true}
        id="Radio"
        onChange={[MockFunction]}
        type="radio"
        value="value"
      />
      <div
        className="css-1p9owhe-Checkmark exxsmtx2"
      >
        <div
          className="css-4mstmd-Centermark exxsmtx1"
          data-testid="radio-centermark"
        />
      </div>
    </div>
  </label>
</div>
`;

exports[`<Radio /> Snapshots renders a simple Radio correctly 1`] = `
<div
  className="css-qpvxlq-Box e1rqh3k81"
>
  <label
    className="css-19j50o1-BaseLabel-Text-BaseLabel ev4kwu51"
    color="textHeading"
    fontSize="text-s"
    fontWeight="bold"
  >
    <div
      className="css-1fivrci-WrapperRadio exxsmtx3"
    >
      <input
        checked={false}
        className="css-tt5avj-RadioInput exxsmtx0"
        onChange={[MockFunction]}
        type="radio"
      />
      <div
        className="css-1p9owhe-Checkmark exxsmtx2"
      >
        <div
          className="css-4mstmd-Centermark exxsmtx1"
          data-testid="radio-centermark"
        />
      </div>
    </div>
  </label>
</div>
`;
